[project]
name = "come-riches"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "dynaconf>=3.2.11",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain[ollama,openai]>=0.3.27",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "pyiter>=0.13.9",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true
